--- a/requirements.txt
+++ b/requirements.txt
@@ -5,72 +5,60 @@ anyio==4.9.0; python_version >= '3.9'
 attrs==25.3.0; python_version >= '3.8'
 blinker==1.9.0; python_version >= '3.9'
 cachetools==5.5.2; python_version >= '3.7'
-certifi==2025.4.26; python_version >= '3.6'
+certifi==2025.6.15; python_version >= '3.7'
 charset-normalizer==3.4.2; python_version >= '3.7'
 click==8.2.1; python_version >= '3.10'
 dnspython==2.7.0; python_version >= '3.9'
 dotenv==0.9.9
-filelock==3.18.0; python_version >= '3.9'
-fsspec==2025.5.1; python_version >= '3.9'
 gitdb==4.0.12; python_version >= '3.7'
 gitpython==3.1.44; python_version >= '3.7'
+google-api-core[grpc]==2.25.1; python_version >= '3.7'
 google-auth==2.40.3; python_version >= '3.7'
+google-cloud-secret-manager==2.24.0; python_version >= '3.7'
 google-genai==1.20.0; python_version >= '3.9'
+googleapis-common-protos[grpc]==1.70.0; python_version >= '3.7'
+grpc-google-iam-v1==0.14.2; python_version >= '3.7'
+grpcio==1.73.0
+grpcio-status==1.73.0
 h11==0.16.0; python_version >= '3.8'
-hf-xet==1.1.3; platform_machine == 'x86_64' or platform_machine == 'amd64' or platform_machine == 'arm64' or platform_machine == 'aarch64'
 httpcore==1.0.9; python_version >= '3.8'
 httpx==0.28.1; python_version >= '3.8'
-huggingface-hub==0.33.0; python_full_version >= '3.8.0'
 idna==3.10; python_version >= '3.6'
 jinja2==3.1.6; python_version >= '3.7'
-joblib==1.5.1; python_version >= '3.9'
 jsonschema==4.24.0; python_version >= '3.9'
 jsonschema-specifications==2025.4.1; python_version >= '3.9'
 markupsafe==3.0.2; python_version >= '3.9'
-mpmath==1.3.0
-narwhals==1.42.0; python_version >= '3.8'
-networkx==3.5; python_version >= '3.11'
+narwhals==1.43.0; python_version >= '3.9'
 numpy==2.3.0; python_version >= '3.11'
 packaging==24.2; python_version >= '3.8'
 pandas==2.3.0; python_version >= '3.9'
 pillow==11.2.1; python_version >= '3.9'
+proto-plus==1.26.1; python_version >= '3.7'
 protobuf==6.31.1; python_version >= '3.9'
 pyarrow==20.0.0; python_version >= '3.9'
 pyasn1==0.6.1; python_version >= '3.8'
 pyasn1-modules==0.4.2; python_version >= '3.8'
-pydantic==2.11.5; python_version >= '3.9'
+pydantic==2.11.7; python_version >= '3.9'
 pydantic-core==2.33.2; python_version >= '3.9'
 pydeck==0.9.1; python_version >= '3.8'
-pymongo[srv]==4.13.1; python_version >= '3.9'
+pymongo[srv]==4.13.2; python_version >= '3.9'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.1.0; python_version >= '3.9'
 python-gitlab==6.0.0; python_full_version >= '3.9.0'
 pytz==2025.2
-pyyaml==6.0.2; python_version >= '3.8'
 referencing==0.36.2; python_version >= '3.9'
-regex==2024.11.6; python_version >= '3.8'
 requests==2.32.4; python_version >= '3.8'
 requests-toolbelt==1.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 rpds-py==0.25.1; python_version >= '3.9'
 rsa==4.9.1; python_version >= '3.6' and python_version < '4'
-safetensors==0.5.3; python_version >= '3.7'
-scikit-learn==1.7.0; python_version >= '3.10'
-scipy==1.15.3; python_version >= '3.10'
-sentence-transformers==4.1.0; python_version >= '3.9'
-setuptools==80.9.0; python_version >= '3.12'
 six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 smmap==5.0.2; python_version >= '3.7'
 sniffio==1.3.1; python_version >= '3.7'
 streamlit==1.45.1; python_version >= '3.9' and python_full_version != '3.9.7'
-sympy==1.14.0; python_version >= '3.9'
 tenacity==9.1.2; python_version >= '3.9'
-threadpoolctl==3.6.0; python_version >= '3.9'
-tokenizers==0.21.1; python_version >= '3.9'
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-torch==2.7.1; python_full_version >= '3.9.0'
 tornado==6.5.1; python_version >= '3.9'
 tqdm==4.67.1; python_version >= '3.7'
-transformers==4.52.4; python_full_version >= '3.9.0'
 typing-extensions==4.14.0; python_version >= '3.9'
 typing-inspection==0.4.1; python_version >= '3.9'
 tzdata==2025.2; python_version >= '2'
