--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ altair==5.5.0; python_version >= '3.9'
 annotated-types==0.7.0; python_version >= '3.8'
 anyio==4.9.0; python_version >= '3.9'
 attrs==25.3.0; python_version >= '3.8'
+baml-py==0.90.2
 blinker==1.9.0; python_version >= '3.9'
 cachetools==5.5.2; python_version >= '3.7'
 certifi==2025.6.15; python_version >= '3.7'
@@ -10,29 +11,31 @@ charset-normalizer==3.4.2; python_version >= '3.7'
 click==8.2.1; python_version >= '3.10'
 dnspython==2.7.0; python_version >= '3.9'
 dotenv==0.9.9
+flask==3.1.1; python_version >= '3.9'
 gitdb==4.0.12; python_version >= '3.7'
 gitpython==3.1.44; python_version >= '3.7'
 google-api-core[grpc]==2.25.1; python_version >= '3.7'
 google-auth==2.40.3; python_version >= '3.7'
 google-cloud-secret-manager==2.24.0; python_version >= '3.7'
-google-genai==1.20.0; python_version >= '3.9'
+google-genai==1.24.0; python_version >= '3.9'
 googleapis-common-protos[grpc]==1.70.0; python_version >= '3.7'
 grpc-google-iam-v1==0.14.2; python_version >= '3.7'
-grpcio==1.73.0
-grpcio-status==1.73.0
+grpcio==1.73.1
+grpcio-status==1.73.1
 h11==0.16.0; python_version >= '3.8'
 httpcore==1.0.9; python_version >= '3.8'
 httpx==0.28.1; python_version >= '3.8'
 idna==3.10; python_version >= '3.6'
+itsdangerous==2.2.0; python_version >= '3.8'
 jinja2==3.1.6; python_version >= '3.7'
 jsonschema==4.24.0; python_version >= '3.9'
 jsonschema-specifications==2025.4.1; python_version >= '3.9'
 markupsafe==3.0.2; python_version >= '3.9'
-narwhals==1.43.0; python_version >= '3.9'
-numpy==2.3.0; python_version >= '3.11'
-packaging==24.2; python_version >= '3.8'
+narwhals==1.45.0; python_version >= '3.9'
+numpy==2.3.1; python_version >= '3.11'
+packaging==25.0; python_version >= '3.8'
 pandas==2.3.0; python_version >= '3.9'
-pillow==11.2.1; python_version >= '3.9'
+pillow==11.3.0; python_version >= '3.9'
 proto-plus==1.26.1; python_version >= '3.7'
 protobuf==6.31.1; python_version >= '3.9'
 pyarrow==20.0.0; python_version >= '3.9'
@@ -43,24 +46,25 @@ pydantic-core==2.33.2; python_version >= '3.9'
 pydeck==0.9.1; python_version >= '3.8'
 pymongo[srv]==4.13.2; python_version >= '3.9'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dotenv==1.1.0; python_version >= '3.9'
-python-gitlab==6.0.0; python_full_version >= '3.9.0'
+python-dotenv==1.1.1; python_version >= '3.9'
+python-gitlab==6.1.0; python_full_version >= '3.9.0'
 pytz==2025.2
 referencing==0.36.2; python_version >= '3.9'
 requests==2.32.4; python_version >= '3.8'
 requests-toolbelt==1.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-rpds-py==0.25.1; python_version >= '3.9'
+rpds-py==0.26.0; python_version >= '3.9'
 rsa==4.9.1; python_version >= '3.6' and python_version < '4'
 six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 smmap==5.0.2; python_version >= '3.7'
 sniffio==1.3.1; python_version >= '3.7'
-streamlit==1.45.1; python_version >= '3.9' and python_full_version != '3.9.7'
-tenacity==9.1.2; python_version >= '3.9'
+streamlit==1.46.1; python_version >= '3.9' and python_full_version != '3.9.7'
+tenacity==8.5.0; python_version >= '3.8'
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 tornado==6.5.1; python_version >= '3.9'
 tqdm==4.67.1; python_version >= '3.7'
 typing-extensions==4.14.0; python_version >= '3.9'
 typing-inspection==0.4.1; python_version >= '3.9'
 tzdata==2025.2; python_version >= '2'
-urllib3==2.4.0; python_version >= '3.9'
+urllib3==2.5.0; python_version >= '3.9'
 websockets==15.0.1; python_version >= '3.9'
+werkzeug==3.1.3; python_version >= '3.9'
